Fix text vertical align middle on safari

--- a/src/components/header/headerMobile.scss
+++ b/src/components/header/headerMobile.scss
@@ -15,12 +15,12 @@
 	_::-webkit-full-page-media,
 	_:future,
 	:root .safari_only {
-		color: #0000ff;
-		background-color: #cccccc;
+		position: absolute;
 	}
-	/* Safari 10.1+ */
+	/* Safari 10.1+*/
+
 	@media not all and (min-resolution: 0.001dpcm) {
-		@media {
+		@supports (-webkit-appearance: none) {
 			.safari_only {
 				position: absolute;
 			}
